--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div id="operation"></div>
             <button class="operator first-row">C</button>
             <button class="operator first-row">Del</button>
-            <button class="operator first-row">%</button>
+            <button class="operator first-row">^</button>
             <button class="operator first-row">/</button>
             <button class="digit second-row">7</button>
             <button class="digit second-row">8</button>
